--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
-baseURL = "https://sma-glen.com/" # Replace with your actual domain
-languageCode = "en-GB"
+baseURL = "https://www.sma-glen.com/" # Replace with your actual domain
+languageCode = "en-us"
 title = "Sma' Glen"
 
 theme = "PaperMod"
