--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,24 +7,27 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest  # Use ubuntu-latest for consistency and latest packages
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           submodules: true
-          fetch-depth: 0  # Fetch the full history for submodules
+          fetch-depth: 0
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: 'latest'  # Or specify a version if needed
+          hugo-version: 'latest'
 
       - name: Build Hugo site
         run: hugo --minify
 
       - name: Debug: Check Working Directory
         run: pwd
+
+      - name: Debug: List public directory
+        run: ls -l ./public
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
