Add debugging to YAML file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,38 +1,1 @@
-name: Deploy Hugo Site
-
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          submodules: true
-          fetch-depth: 0
-
-      - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v2
-        with:
-          hugo-version: 'latest'
-
-      - name: Build Hugo site
-        run: hugo --minify
-
-      - name: Debug: Check Working Directory
-        run: pwd
-
-      - name: Debug: List public directory
-        run: ls -l ./public
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
-          publish_branch: gh-pages
-          cname: sma-glen.com
+name: Deploy Hugo Siteon:  push:    branches:      - mainjobs:  deploy:    runs-on: ubuntu-latest    steps:      - name: Checkout code        uses: actions/checkout@v4        with:          submodules: true          fetch-depth: 0      - name: Setup Hugo        uses: peaceiris/actions-hugo@v2        with:          hugo-version: 'latest'      - name: Build Hugo site        run: hugo --minify      - name: Debug: Check Working Directory        run: pwd      - name: Debug: List public directory        run: ls -l ./public      - name: Deploy to GitHub Pages        uses: peaceiris/actions-gh-pages@v3        with:          github_token: ${{ secrets.GITHUB_TOKEN }}          publish_dir: ./public          publish_branch: gh-pages          cname: sma-glen.com
