--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,3 +33,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           cname: sma-glen.com
+          publish_dir: public/ #<--- Changed this line! Added the trailing slash
