Update about page

--- a/hugo.toml
+++ b/hugo.toml
@@ -22,5 +22,5 @@ theme = "PaperMod"
     [[menu.main]]
         identifier = "about"
         name = "About"
-        url = "/about"
+        url = "/about/"
         weight = 20
